# Software_Kipp

./: .gitignore  README.md  SPEAR_Arm.urdf  arm_camera_base.sh  arm_camera_rover.sh  backup_camera_base.sh  backup_camera_rover.sh  camera_base_launch.sh  camera_rover_launch.sh  frames_2024-02-23_14.41.03.gv  frames_2024-08-07_21.59.22.gv  infrared_camera_base.sh  infrared_camera_rover.sh  main_camera_base.sh  main_camera_rover.sh  received.txt  ros2_onboarding_guide.md
Algorithims/: ArUco.py  description.md  photographer.py
Algorithms/: ArUco.py  Blue_color_trace.py  Panorama.py  Red_color_trace.py  cell_detect.py
Rover_Description/: package.xml  setup.cfg  setup.py
Rover_Teleoperation/: package.xml  setup.cfg  setup.py
Rover_Teleoperation/config/: joystick.yaml
Rover_Teleoperation/launch/: joystick.launch.py
Rover_Teleoperation/scripts/: inputs.py
Startup Scripts/: base_arm.sh  base_enviorment.sh  base_pipe.sh  base_search.sh  base_traversal.sh  rover_arm.sh  rover_enviroment.sh  rover_pipe.sh  rover_search.sh  rover_traversal.sh
description/: package.xml  setup.py
description/URDF/: SPEAR_Arm.urdf
description/meshes/: link5.stl
description/rviz/: urdf_config.rviz
docker/: Dockerfile.kipp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
interfaces/: CMakeLists.txt  package.xml
interfaces/msg/: RoverCommand.msg
kipp_description/: package.xml
kipp_hardware/: setup.cfg  setup.py
kipp_hardware/config/: main_camera.yaml
kipp_hardware/launch/: kipp_hardware.launch.py
kipp_nav/: package.xml
log/: latest_build  latest_list
rover_description/: package.xml  setup.cfg  setup.py
rover_drive/: package.xml  setup.cfg  setup.py
src/kipp_hardware/: package.xml  setup.py
src/kipp_hardware/config/: back_camera.yaml  main__camera.yaml
src/kipp_hardware/kipp_hardware/: gps_serial.py  kipp_can_drive.py  xbox_controller_node.py
src/kipp_hardware/launch/: kipp_hardware.launch.py
src/kipp_sensors/: package.xml  setup.cfg  setup.py
src/kipp_sensors/kipp_sensors/: Random_gps.py  gps_node.py  save_gps_node.py
src/kipp_sensors/launch/: kipp_camera.launch.py
(+965 files in other folders)
