<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kipp_hardware</name>
  <version>1.0.0</version>
  <description>Hardware Interface for our Rover. Currently includes both Zed Cameras, GPS Module and Can communication</description>
  <maintainer email="kandapah@ualberta.ca">Induwara Kandapahala</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>can_msgs</depend>
  <depend>pyserial</depend>
  <depend>pynmea2</depend>
  <depend>pyudev</depend>
  <depend>python-can</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
